==> EdgeTX/edgetx/radio/src/targets/common/arm/stm32/stm32_hal_adc.cpp <==
#include "opentx.h"
#include "hal/adc_driver.h"
#include "stm32_hal_adc.h"

static void adc_init_pins()
{
  GPIO_InitTypeDef GPIO_InitStructure;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;

#if defined(ADC_GPIOA_PINS)
#if defined(RADIO_FAMILY_T16) || defined(PCBNV14) || defined(PCBPL18)
  if (globalData.flyskygimbals)
  {
      GPIO_InitStructure.GPIO_Pin = ADC_GPIOA_PINS_FS;
  }
  else
#endif
  GPIO_InitStructure.GPIO_Pin = ADC_GPIOA_PINS;
  GPIO_Init(GPIOA, &GPIO_InitStructure);
#endif

#if defined(ADC_GPIOB_PINS)
  GPIO_InitStructure.GPIO_Pin = ADC_GPIOB_PINS;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
#endif

#if defined(ADC_GPIOC_PINS)
  GPIO_InitStructure.GPIO_Pin = ADC_GPIOC_PINS;
  GPIO_Init(GPIOC, &GPIO_InitStructure);
#endif

#if defined(ADC_GPIOF_PINS)
  GPIO_InitStructure.GPIO_Pin = ADC_GPIOF_PINS;
  GPIO_Init(GPIOF, &GPIO_InitStructure);
#endif  
}

static void adc_setup_scan_mode(ADC_TypeDef* ADCx, uint8_t nconv)
{
  ADC_InitTypeDef ADC_InitStructure;
  ADC_StructInit(&ADC_InitStructure);

  ADC_InitStructure.ADC_ScanConvMode = ENABLE; // Sets ADC_CR1_SCAN
  ADC_InitStructure.ADC_ContinuousConvMode = DISABLE; // Clears ADC_CR2_CONT
  ADC_InitStructure.ADC_ExternalTrigConvEdge = ADC_ExternalTrigConvEdge_None; // Software trigger
  ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
  ADC_InitStructure.ADC_NbrOfConversion = nconv; // Channel count
  
  ADC_Init(ADCx, &ADC_InitStructure);

  // enable ADC_MAIN
  ADC_Cmd(ADCx, ENABLE);                            // ADC_CR2_ADON
  // enable DMA for ADC
  ADC_DMACmd(ADCx, ENABLE);                         // ADC_CR2_DMA
  ADC_DMARequestAfterLastTransferCmd(ADCx, ENABLE); // ADC_CR2_DDS
}

static void adc_init_channels(ADC_TypeDef* adc, const stm32_hal_adc_channel* chan,
                              uint8_t nconv)
{
  if (!chan || !nconv) return;

  uint8_t rank = 1;
  while (nconv > 0) {
    ADC_RegularChannelConfig(adc, chan->adc_channel, rank, chan->sample_time);
    nconv--; rank++; chan++;
  }
}

static bool adc_init_dma_stream(ADC_TypeDef* adc, DMA_Stream_TypeDef * dma_stream,
                                uint32_t dma_channel, uint16_t* dest, uint8_t nconv)
{
  // Disable DMA before continuing (see ref. manual "Stream configuration procedure")
  if (!adc_disable_dma(dma_stream))
      return false;

  // Clear Interrupt flags
  adc_dma_clear_flags(dma_stream);

  // setup DMA request
  dma_stream->PAR = CONVERT_PTR_UINT(&adc->DR);
  dma_stream->M0AR = CONVERT_PTR_UINT(dest);
  dma_stream->NDTR = nconv;
  // Very high priority, 1 byte transfers, increment memory
  dma_stream->CR = DMA_SxCR_PL | dma_channel | DMA_SxCR_MSIZE_0 |
                   DMA_SxCR_PSIZE_0 | DMA_SxCR_MINC;
  // disable direct mode, half full FIFO
  dma_stream->FCR = DMA_SxFCR_DMDIS | DMA_SxFCR_FTH_0;
  return true;
}

static bool stm32_hal_adc_init()
{
  adc_init_pins();

  // Init common to all ADCs
  ADC_CommonInitTypeDef ADC_CommonInitStruct;
  ADC_CommonStructInit(&ADC_CommonInitStruct);
  ADC_CommonInitStruct.ADC_Mode = ADC_Mode_Independent;
  ADC_CommonInitStruct.ADC_Prescaler = ADC_Prescaler_Div2;
  ADC_CommonInit(&ADC_CommonInitStruct);

  const stm32_hal_adc* adc_def = ADC_hal_def;
  while (adc_def->adc) {
    uint8_t nconv = 0;
    if (adc_def->get_nconv) {
      nconv = adc_def->get_nconv();
      if (nconv > 0) {
        adc_setup_scan_mode(adc_def->adc, nconv);

        // configure each channel
        if (adc_def->get_channels) {
          const stm32_hal_adc_channel* chan = adc_def->get_channels();
          adc_init_channels(adc_def->adc, chan, nconv);
        }

        if (adc_def->dma_stream && adc_def->get_dma_buffer) {
          uint16_t* dma_buffer = adc_def->get_dma_buffer();
          if (!adc_init_dma_stream(adc_def->adc, adc_def->dma_stream,
                                   adc_def->dma_channel, dma_buffer, nconv))
              return false;
        }
      }
    }
    // move to next ADC definition
    adc_def++;
  }

  //TODO: move VBat & PWM sticks somewhere else.

  // Enable vbat sensor
  ADC_VBATCmd(ENABLE);

#if NUM_PWMSTICKS > 0
  if (STICKS_PWM_ENABLED()) {
    sticksPwmInit();
  }
#endif
  return true;
}

static void adc_dma_clear_flags(DMA_Stream_TypeDef * dma_stream)
{
  // no other choice, sorry for that...
  if (dma_stream == DMA2_Stream4) {
    /* Reset interrupt pending bits for DMA2 Stream4 */
    DMA2->HIFCR = DMA_Stream4_IT_MASK;

  } else if (dma_stream == DMA2_Stream0) {
    /* Reset interrupt pending bits for DMA2 Stream0 */
    DMA2->LIFCR = DMA_Stream0_IT_MASK;
  }
}

static bool stm32_hal_adc_start_read()
{
  const stm32_hal_adc* adc_def = ADC_hal_def;
  while (adc_def->adc) {
    uint8_t nconv = 0;
    if (adc_def->get_nconv) {
      nconv = adc_def->get_nconv();
      if (nconv > 0) {
        if (adc_def->dma_stream && adc_def->get_dma_buffer) {
          if (!adc_start_dma_conversion(adc_def->adc, adc_def->dma_stream))
            return false;
        } else if (nconv == 1) {
          adc_start_single_conversion(adc_def->adc);
        }
      }
    }
    // move to next ADC definition
    adc_def++;
  }
  return true;
}

static void stm32_hal_adc_wait_completion()
{
  //TODO:
  // - iterate through ADCs
  // - replace with IRQ trigger (both)
  // - move RTC batt reading somewhere else
  
#if defined(ADC_EXT) && defined(ADC_EXT_DMA_Stream)
  // Wait for all ADCs to complete
  for (unsigned int i=0; i<10000; i++) {
    if (DMA_GetFlagStatus(ADC_DMA_Stream, ADC_DMA_TC_Flag) != RESET &&
        DMA_GetFlagStatus(ADC_EXT_DMA_Stream, ADC_EXT_TC_Flag) != RESET) {
      break;
    }
  }
  //TODO: move into completion IRQ trigger
  adc_disable_dma(ADC_DMA_Stream);
  adc_disable_dma(ADC_EXT_DMA_Stream);
#if defined(PCBPL18)
  if (isVBatBridgeEnabled()) {
    rtcBatteryVoltage = adcValues[VBATBRIDGE_IDX];
    disableVBatBridge();
  }
#endif
#else
  // Wait only for the main ADC, and hope others are done as well
  for (unsigned int i = 0; i < 10000; i++) {
    if (DMA_GetFlagStatus(ADC_DMA_Stream, ADC_DMA_TC_Flag) != RESET) {
      break;
    }
  }
  //TODO: move into completion IRQ trigger
  adc_disable_dma(ADC_DMA_Stream);

#if defined(ADC_EXT) && !defined(ADC_EXT_DMA_Stream)
  if (isVBatBridgeEnabled()) {
    rtcBatteryVoltage = ADC_EXT->DR;
    disableVBatBridge();
  }
#endif
#endif
}
